[CSS] Fixing note attachments padding, height and allowing their wrap when limited space is available

--- a/public/assets/default_theme/css/pages/feeds.css
+++ b/public/assets/default_theme/css/pages/feeds.css
@@ -195,13 +195,15 @@
 
 .note-attachments {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .note-attachments-unit {
     border-radius: var(--s);
     display: flex;
     max-width: max-content;
-    padding: var(--s);
+    height: min-content;
+    padding: 4px;
 }
 
 .note-attachments-unit > figure figcaption {
